[tool.poetry]
name = "scrape-dnd"
version = "0.1.0"
description = ""
authors = ["Jordan DeBeer <jordan@jordandebeer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
selenium-firefox = "^1.0.8"
phantomjs = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
